--- a/localisation/HOF_GUI_HUN_l_english.yml
+++ b/localisation/HOF_GUI_HUN_l_english.yml
@@ -26,23 +26,23 @@
  HUN_influence_of_the_left_wing_group_idea_3_effect:0 "$MODIFIER_POLITICAL_POWER_GAIN$: §R-0.03§!\n$MODIFIER_STABILITY_FACTOR$: §R-3.00%§!\n$communism_drift$: §G+0.03§!\n$MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR$: §G+3.00%§!" 
  HUN_influence_of_the_left_wing_group_idea_4_effect:0 "$MODIFIER_POLITICAL_POWER_GAIN$: §R-0.05§!\n$MODIFIER_STABILITY_FACTOR$: §R-5.00%§!\n$communism_drift$: §G+0.05§!\n$MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR$: §G+5.00%§!" 
  HUN_influence_of_the_left_wing_group_idea_5_effect:0 "$MODIFIER_POLITICAL_POWER_GAIN$: §R-0.10§!\n$MODIFIER_STABILITY_FACTOR$: §R-10.0%§!\n$communism_drift$: §G+0.10§!\n$MODIFIER_PRODUCTION_FACTORY_MAX_EFFICIENCY_FACTOR$: §G+10.0%§!" 
- HOF_gui_berlin_icon:0 "£city_Berlin|2"
- HOF_gui_kremlin_icon:0 "£city_Kremlin|2"
- HOF_gui_camelot_icon:0 "£city_Camelot|2"
- HOF_gui_paris_icon:0 "£city_Paris|2"
- HOF_gui_rome_icon:0 "£city_Rome|2"
- HOF_gui_stockholm_icon:0 "£city_Stockholm|2"
- HOF_gui_tokyo_icon:0 "£city_Tokyo|2"
- HOF_gui_washington_icon:0 "£city_Washington|2"
+ HOF_gui_berlin_icon:0 "£GFX_city_Berlin|2"
+ HOF_gui_kremlin_icon:0 "£GFX_city_Kremlin|2"
+ HOF_gui_camelot_icon:0 "£GFX_city_Camelot|2"
+ HOF_gui_paris_icon:0 "£GFX_city_Paris|2"
+ HOF_gui_rome_icon:0 "£GFX_city_Rome|2"
+ HOF_gui_stockholm_icon:0 "£GFX_city_Stockholm|2"
+ HOF_gui_tokyo_icon:0 "£GFX_city_Tokyo|2"
+ HOF_gui_washington_icon:0 "£GFX_city_Washington|2"
 
- HOF_gui_berlin_icon_grey:0 "£city_Berlin|1"
- HOF_gui_kremlin_icon_grey:0 "£city_Kremlin|1"
- HOF_gui_camelot_icon_grey:0 "£city_Camelot|1"
- HOF_gui_paris_icon_grey:0 "£city_Paris|1"
- HOF_gui_rome_icon_grey:0 "£city_Rome|1"
- HOF_gui_stockholm_icon_grey:0 "£city_Stockholm|1"
- HOF_gui_tokyo_icon_grey:0 "£city_Tokyo|1"
- HOF_gui_washington_icon_grey:0 "£city_Washington|1"
+ HOF_gui_berlin_icon_grey:0 "£GFX_city_Berlin|1"
+ HOF_gui_kremlin_icon_grey:0 "£GFX_city_Kremlin|1"
+ HOF_gui_camelot_icon_grey:0 "£GFX_city_Camelot|1"
+ HOF_gui_paris_icon_grey:0 "£GFX_city_Paris|1"
+ HOF_gui_rome_icon_grey:0 "£GFX_city_Rome|1"
+ HOF_gui_stockholm_icon_grey:0 "£GFX_city_Stockholm|1"
+ HOF_gui_tokyo_icon_grey:0 "£GFX_city_Tokyo|1"
+ HOF_gui_washington_icon_grey:0 "£GFX_city_Washington|1"
  
  HOF_gui_error:0 "F U C K"
  HOF_get_city_effect_tt:0 "[GetCityEffect]"
