--- a/localisation/HOF_GUI_HUN_l_english.yml
+++ b/localisation/HOF_GUI_HUN_l_english.yml
@@ -1,4 +1,6 @@
 ﻿l_english:
+ intro_txt:0 "§R1.$intro.0.t$§!\n\n$intro.0.desc$\n\n §H2.$intro.1.t$§!\n\n$intro.1.desc$\n\n §G3.$intro.2.t$§!\n\n$intro.2.desc$"
+
  HUN_left_influence:0 "Communist influence"  
  HUN_left_influence_name:0 "§H[GetHunLeftName]§!\n[GetHunLeftModifier]"
  HUN_left_influence_desc:0 "§L[GetHunLeftDesc]§!"
